Add Service implementation